fix spacing around headers

--- a/css/main.sass
+++ b/css/main.sass
@@ -43,6 +43,10 @@ aside > *
 
 h1,h2,h3
     font-family: $display-font
+    margin-bottom: 0
+    
+h1:first-child,h2:first-child,h3:first-child
+    margin-top: 0
 
 p
     color: #222
